alert Message mise a jour de la vue de preview annonce creation de la fenetre detail annonce creation d une fenetre loader, d un class compteur gestion du compteur. gestion des tache de scraping et liaison avec le compteur et son changement d etat entre le scraping et le chargement des vue